--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react_template_repo",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2"
   },
   "scripts": {
@@ -27,9 +28,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^5.1.2"
   },
   "proxy": "http://localhost:5000"
 }
