Fix name in workflow for backend

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
         CI: true
     - name: backend test
       run: |
-        yarn workspace backend test
+        yarn workspace server test
       env:
         CI: true
