--- a/server/package.json
+++ b/server/package.json
@@ -16,15 +16,16 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "mailgun-js": "^0.22.0",
         "mongoose": "^5.7.1",
         "morgan": "^1.9.1"
     },
     "devDependencies": {
         "concurrently": "^4.1.0",
+        "mocha": "^6.2.1",
         "nodemon": "^1.18.10",
         "should": "^13.2.3",
-        "supertest": "^4.0.2",
-        "mocha": "^6.2.1"
+        "supertest": "^4.0.2"
     },
     "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
 }
