--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,7 @@
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "mongoose": "^5.7.1",
-        "morgan": "^1.9.1",
-        "xlsx": "^0.15.1"
+        "morgan": "^1.9.1"
     },
     "devDependencies": {
         "concurrently": "^4.1.0",
