Basic category page. Still lots to do.

--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.10.1",
+    "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "reactdom": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
