Setup project for Heroku deployment.
Change the root package.json to have the correct build and start for heroku.
Also change the backend to use environment variables first and config file if they don't exist.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "client": "yarn workspace client start",
     "server": "yarn workspace server start",
-    "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\""
+    "start-dev": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\"",
+    "build": "yarn workspace client build && yarn workspace server build",
+    "start": "node server/dist/server.js"
   },
   "dependencies": {
     "concurrently": "^5.0.0"
