--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "main": "server.ts",
     "scripts": {
         "test": "mocha tests",
-        "start": "concurrently \"tsc -w\" \"nodemon dist/server.js\""
+        "start": "concurrently \"tsc -w\" \"nodemon dist/server.js\"",
+        "build": "tsc"
     },
     "repository": {
         "type": "git",
@@ -23,6 +24,7 @@
     },
     "devDependencies": {
         "@types/body-parser": "^1.17.1",
+        "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
         "@types/mailgun-js": "^0.22.3",
         "@types/mongoose": "^5.5.30",
