--- a/server/package.json
+++ b/server/package.json
@@ -15,21 +15,31 @@
     "keywords": [],
     "license": "MIT",
     "dependencies": {
+        "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "mailgun-js": "^0.22.0",
         "mongoose": "^5.7.1",
-        "morgan": "^1.9.1"
+        "morgan": "^1.9.1",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^5.0.1"
     },
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.17.1",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
+        "@types/express-session": "^1.15.15",
         "@types/mailgun-js": "^0.22.3",
         "@types/mongoose": "^5.5.30",
         "@types/morgan": "^1.7.37",
         "@types/node": "^12.12.7",
+        "@types/passport": "^1.0.1",
+        "@types/passport-local": "^1.0.33",
+        "@types/passport-local-mongoose": "^4.0.13",
         "concurrently": "^4.1.0",
         "mocha": "^6.2.1",
         "nodemon": "^1.19.4",
