--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
@@ -30,6 +31,7 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.17.1",
+        "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
         "@types/express-session": "^1.15.15",
