--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "bcrypt": "^3.0.6",
         "body-parser": "^1.19.0",
+        "connect-mongo": "^3.2.0",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -25,8 +26,7 @@
         "mongoose": "^5.7.1",
         "morgan": "^1.9.1",
         "passport": "^0.4.0",
-        "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^5.0.1"
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
