--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "A app to help citizens find services.",
     "main": "server.ts",
     "scripts": {
-        "test": "mocha tests",
+        "test": "ts-mocha tests/*.ts",
         "start": "concurrently \"tsc -w\" \"nodemon dist/server.js\"",
         "build": "tsc"
     },
@@ -31,22 +31,28 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/body-parser": "^1.17.1",
+        "@types/chai": "^4.2.6",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
         "@types/express-session": "^1.15.15",
         "@types/mailgun-js": "^0.22.3",
+        "@types/mocha": "^5.2.7",
         "@types/mongoose": "^5.5.30",
         "@types/morgan": "^1.7.37",
         "@types/node": "^12.12.7",
         "@types/passport": "^1.0.1",
         "@types/passport-local": "^1.0.33",
         "@types/passport-local-mongoose": "^4.0.13",
+        "@types/sinon": "^7.5.1",
+        "chai": "^4.2.0",
         "concurrently": "^4.1.0",
         "mocha": "^6.2.1",
         "nodemon": "^1.19.4",
         "should": "^13.2.3",
+        "sinon": "^7.5.0",
         "supertest": "^4.0.2",
+        "ts-mocha": "^6.0.0",
         "typescript": "^3.7.2"
     },
     "homepage": "https://github.com/UFWebApps/React_Template_Repo#readme"
